--- a/FA-V3.vcxproj.filters
+++ b/FA-V3.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClInclude Include="src\Gameplay\Components\BandageCount.h">
       <Filter>Gameplay\Components</Filter>
     </ClInclude>
+    <ClInclude Include="src\Gameplay\Components\BandageUI.h">
+      <Filter>Gameplay\Components</Filter>
+    </ClInclude>
     <ClInclude Include="src\Gameplay\Components\Bolt.h">
       <Filter>Gameplay\Components</Filter>
     </ClInclude>
@@ -205,6 +208,9 @@
       <Filter>Gameplay\Components</Filter>
     </ClInclude>
     <ClInclude Include="src\Gameplay\Components\NormalAmmoCount.h">
+      <Filter>Gameplay\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Gameplay\Components\NormalAmmoUI.h">
       <Filter>Gameplay\Components</Filter>
     </ClInclude>
     <ClInclude Include="src\Gameplay\Components\ParticleSystem.h">
@@ -491,6 +497,9 @@
     <ClCompile Include="src\Gameplay\Components\BandageCount.cpp">
       <Filter>Gameplay\Components</Filter>
     </ClCompile>
+    <ClCompile Include="src\Gameplay\Components\BandageUI.cpp">
+      <Filter>Gameplay\Components</Filter>
+    </ClCompile>
     <ClCompile Include="src\Gameplay\Components\Bolt.cpp">
       <Filter>Gameplay\Components</Filter>
     </ClCompile>
@@ -561,6 +570,9 @@
       <Filter>Gameplay\Components</Filter>
     </ClCompile>
     <ClCompile Include="src\Gameplay\Components\NormalAmmoCount.cpp">
+      <Filter>Gameplay\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Gameplay\Components\NormalAmmoUI.cpp">
       <Filter>Gameplay\Components</Filter>
     </ClCompile>
     <ClCompile Include="src\Gameplay\Components\ParticleSystem.cpp">
